Fixed layout issues

--- a/app/components/Layout/Footer/Footer.module.scss
+++ b/app/components/Layout/Footer/Footer.module.scss
@@ -1,13 +1,17 @@
-.wrapper {
-  flex-shrink: 0;
+.section {
   width: 100%;
   background: var(--background-menu);
 }
 
+.wrapper {
+  max-width: var(--max-width);
+  margin-inline: auto;
+  padding-inline: var(--viewport-padding);
+}
+
 .footer {
   font-size: var(--mantine-font-size-xs);
-  margin: auto;
-  padding: var(--mantine-spacing-lg) var(--mantine-spacing-xl);
+  padding-block: var(--mantine-spacing-xl) var(--mantine-spacing-lg);
 
   &-text {
     margin-bottom: 0.3em;
